extensions/chorstiftung/Resources/Public/StyleSheet/theme-white.css
/* ... */
@media (min-width: 1400px) {
  body .bigtext {
    font-size: 160px;
  }
}
body .logo svg {
  max-height: 110px;
  max-width: 450px;
  transition: max-height 0.5s ease-in-out, max-width 0.5s ease-in-out;
}
@media (min-width: 768px) {
  body .logo svg path:nth-child(-n+2) {
    opacity: 1;
    transition: opacity 0.5s ease-in-out, max-width 0.5s ease-in-out;
  }
}
body .navbar {
  padding-bottom: 0;
}
body .ce-right.ce-intext .ce-bodytext,
body .ce-right.ce-intext .ce-gallery, body .ce-left.ce-intext .ce-bodytext,
body .ce-left.ce-intext .ce-gallery {
  width: 100%;
}
@media (min-width: 768px) {
  body .ce-right.ce-intext .ce-bodytext,
  body .ce-right.ce-intext .ce-gallery, body .ce-left.ce-intext .ce-bodytext,
  body .ce-left.ce-intext .ce-gallery {
    width: auto;
  }
}
body div[class*=bg-] {
  padding: 15px;
}
body .align-items-stretch > div > div[class*=bg-] {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
@media (min-width: 768px) {
  body .align-items-stretch img {
    width: auto;
    max-width: initial;
    height: 100%;
  }
}
body .navbar-toggler {
  border: 0;
  background: transparent;
}
body .navbar-toggler[aria-expanded=false] svg:last-child {
  display: none;
}
body .navbar-toggler[aria-expanded=true] svg:first-child {
  display: none;
}
body .navbar-toggler svg {
  width: 100%;
  max-width: 72px;
  max-height: 72px;
  transition: max-height 0.5s ease-in-out, max-width 0.5s ease-in-out;
}
body .contact {
  padding: 6px 8px;
}
body .contact svg {
  width: 36px;
  height: 36px;
}
body .nav-link {
  font-family: "TheSans", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: bold;
  line-height: 1;
}
@media (min-width: 576px) {
  body .nav-link {
    font-size: 18px;
  }
}
@media (min-width: 768px) {
  body .nav-link {
    font-size: 20px;
  }
}
@media (min-width: 1200px) {
  body .nav-link {
    font-size: 18px;
  }
}
body .nav-link.active {
  color: #009136;
  position: relative;
}
@media (min-width: 1200px) {
  body .nav-link.active:before {
    content: "";
    border: 0;
    display: block;
    position: absolute;
    left: 0;
    bottom: -15px;
    width: 100%;
    height: 10px;
    background: transparent;
  }
}
@media (min-width: 1200px) {
  body .nav-item {
    padding-right: 0.5rem;
    padding-left: 0.5rem;
  }
}
body .btn-primary {
  font-size: 18px;
  font-weight: 600;
  padding: 5px 20px;
}
body .btn-primary:focus, body .btn-primary:active, body .btn-primary:focus-visible, body .btn-primary:target, body .btn-primary:focus-within {
  outline: none !important;
  box-shadow: none !important;
  outline-style: none !important;
  outline-color: transparent;
}
body .list-group-item {
  background: transparent;
  padding: 0;
}
@media (min-width: 768px) {
  body .list-group-item {
    padding: 0.5 rem 1rem;
  }
}
body #head.minify .navbar-toggler svg {
  max-width: 64px;
  max-height: 64px;
  transition: max-height 0.5s ease-in-out, max-width 0.5s ease-in-out;
}
body #head.minify .logo svg {
  max-width: 285px;
  max-height: 85px;
  transition: max-height 0.5s ease-in-out, max-width 0.5s ease-in-out;
}

@media (min-width: 768px) {
  footer .frame-type-2cols, .footer .frame-type-2cols {
    font-weight: bold;
  }
}
footer .frame-type-menu_subpages, .footer .frame-type-menu_subpages {
  font-weight: bold;
}

.btn-close {
  border: 0;
  background: transparent;
}
.btn-close svg {
  width: 68px;
  height: 72px;
}

.bg-image {
  z-index: -10;
}

.offcanvas-top {
  height: auto;
  min-height: 50vh;
  padding: 0 15px;
  overflow: hidden;
}
@media (min-width: 768px) {
  .offcanvas-top {
    padding: 0 45px;
  }
}
@media (min-width: 1200px) {
  .offcanvas-top {
    overflow: visible;
    padding: 0;
    min-height: 0;
  }
}
.offcanvas-top .logo-mobile svg {
  height: 110px;
}
.offcanvas-top .nav-wrapper {
  min-height: 100%;
}
@media (min-width: 768px) and (max-width: 1199.98px) {
  .offcanvas-top .nav-wrapper {
    padding-bottom: 88px;
  }
}
@media (min-width: 1200px) {
  .offcanvas-top .nav-wrapper {
    min-height: 0;
    padding-bottom: 0;
  }
}

.col-12 + .col-12 {
  margin-top: calc(var(--bs-gutter-x) * 0.5);
}
@media (min-width: 768px) {
  .col-12 + .col-12 {
    margin-top: 0;
  }
}

@media (min-width: 768px) {
  .position-md-absolute {
    position: absolute !important;
  }
}
@media (min-width: 992px) {
  .position-lg-absolute {
    position: absolute !important;
  }
}
@media (min-width: 1200px) {
  .position-xl-absolute {
    position: absolute !important;
  }
  .navbar-expand-xl .offcanvas {
    width: auto;
  }
}
@media (min-width: 1400px) {
  .start-xxl-0 {
    left: 0 !important;
  }
}
@media (min-width: 1200px) and (max-width: 1399.98px) {
  .end-xl-0 {
    right: 0 !important;
  }
}
.bgimage-container > picture + div {
  z-index: 10;
}

.bg-blue {
  background-color: #0f69b1;
}

.bg-green {
  background-color: #009136;
}

.bg-white {
  background-color: white;
}

.drop-shadow {
  filter: drop-shadow(1px 1px 10px rgba(0, 0, 0, 0.5));
}
.drop-shadow.container-fluid {
  width: calc(100% - 20px);
}
.drop-shadow.container-fluid.px-0 {
  width: 100%;
}
@media (min-width: 992px) {
  .drop-shadow {
    filter: drop-shadow(1px 1px 50px rgba(0, 0, 0, 0.5));
  }
  .drop-shadow.container-fluid {
    width: calc(100% - 150px);
  }
  .drop-shadow.container-fluid.px-0 {
    width: 100%;
  }
}

.cke_combopanel {
  width: 250px !important;
}

.cke_editable {
  padding: 8px;
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}

.line-before {
  padding-left: 40px;
  position: relative;
}
.line-before:before {
  position: absolute;
  width: 28px;
  content: "";
  border: 0;
  border-top: 1px solid #D1D1D6;
  display: block;
  left: 0;
  top: calc(50% - 1px);
}
@media (min-width: 768px) {
  .line-before {
    padding-left: 90px;
  }
  .line-before:before {
    width: 75px;
  }
}
/* ... */

